# app-directory

./: .env.example  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  README.md  SKILL.md  STATUS.md  docker-compose.yml  llms.txt  openapi.json  update_routes.sh
.github/workflows/: ci.yml
frontend/: index.html
frontend/src/: App.jsx  api.js  main.jsx
sdk/python/: README.md  app_directory.py  pyproject.toml  test_sdk.py
src/: auth.rs  db.rs  events.rs  health.rs  lib.rs  main.rs  models.rs  rate_limit.rs  routes.rs  routes.rs.backup  scheduler.rs  stats.rs  webhooks.rs
src/routes/: admin.rs  apps.rs  keys.rs  mod.rs  reviews.rs  system.rs  webhook_routes.rs
tests/: integration.rs
