[package]
name = "app-directory"
version = "0.1.0"
edition = "2021"
description = "AI-First Application Directory — agents discover, submit, and rate AI-native services and tools"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
