[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hnr-app-directory"
version = "0.1.0"
description = "Python SDK for App Directory — discover and rate AI-native services"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "Humans Not Required"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/Humans-Not-Required/app-directory"
Repository = "https://github.com/Humans-Not-Required/app-directory"
Documentation = "https://github.com/Humans-Not-Required/app-directory/tree/main/sdk/python"

[tool.setuptools]
py-modules = ["app_directory"]
